added ui, some fixes are still required